# academic-file-converter

./: .flake8  .gitignore  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  README.zh.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  main.yml  test-basic.yml  test-flow.yml  test-workflow.yml  test.yml
academic/: __init__.py  cli.py  editFM.py  generate_markdown.py  import_assets.py  import_bibtex.py  import_notebook.py  jupyter_whitespace_remover.py  publication_type.py  utils.py  version.py
academic/templates/: publication.md
tests/: test_bibtex_import.py  test_notebook_import.py
tests/data/: article.bib  book.bib  report.bib  thesis.bib
tests/data/notebooks/: test.ipynb
