[tool.poetry]
name = "academic"
description = "Import Bibtex references from your reference manager to your Markdown-formatted website or book."
version = "0.9.0"
authors = ["George Cushen"]
readme = "README.md"
homepage = "https://wowchemy.com"
repository = "https://github.com/wowchemy/bibtex-to-markdown"
keywords = ["wowchemy", "bibtex", "markdown", "latex", "publication", "reference"]
license = "MIT"
packages = [
    { include = "academic" },
]

[tool.poetry.scripts]
academic = "academic.cli:main"

[tool.poetry.dependencies]
python = ">=3.11.5"
bibtexparser = "^1.4.0"
"ruamel.yaml" = "^0.17.32"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"

[tool.black]
line-length = 150  # Match Flake8 setting in `.flake8` file
