[build-system]
# See https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "academic"
description = "Import Bibtex publications and Jupyter Notebook blog posts into your Markdown-formatted website or book."
version = "0.11.2"
authors = ["George Cushen"]
readme = "README.md"
homepage = "https://hugoblox.com/"
documentation = "https://docs.hugoblox.com/reference/content-types/"
repository = "https://github.com/GetRD/academic-file-converter"
keywords = ["research", "Jupyter", "bibtex", "markdown", "latex", "publication", "reference", "academic", "converter"]
license = "MIT"
packages = [
    { include = "academic" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
academic = "academic.cli:main"

[tool.poetry.dependencies]
python = ">=3.11.5"
bibtexparser = "~1.4"
"ruamel.yaml" = "~0.17"
nbconvert = "^7.10.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
pyright = "^1.1.329"
jupyter = "^1.0.0"

[tool.black]
target-version = ['py311', 'py312']
line-length = 150  # Match Flake8 setting in `.flake8` file

[tool.pyright]
include = ["academic"]

[tool.pytest.ini_options]
# Ignore warning from Jupyter package: `DeprecationWarning: Jupyter is migrating its paths to use standard platformdirs`
filterwarnings =['ignore::DeprecationWarning']
